Added FilesReader library and datagrid in mainwindow
FilesReader get a method to return list of files in dictionary from argument path

--- a/SimplyTotalCommander/SimplyTotalCommander.csproj
+++ b/SimplyTotalCommander/SimplyTotalCommander.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\FileReader.csproj">
+      <Project>{999f11e1-cc01-46d7-a806-25f7672f261b}</Project>
+      <Name>FileReader</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
