--- a/ClassLibrary1/FileReader.csproj
+++ b/ClassLibrary1/FileReader.csproj
@@ -33,6 +33,7 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
