--- a/SimplyTotalCommander/SimplyTotalCommander.csproj
+++ b/SimplyTotalCommander/SimplyTotalCommander.csproj
@@ -96,17 +96,17 @@
     <None Include="Fonts\Rex\FFF EULA License ver2.1.pdf" />
     <None Include="Fonts\Rex\Rex-Bold.eot" />
     <Resource Include="Fonts\Rex\Rex-Bold.otf" />
-    <Resource Include="Fonts\Rex\Rex-Bold.ttf" />
+    <Content Include="Fonts\Rex\Rex-Bold.ttf" />
     <None Include="Fonts\Rex\Rex-Bold.woff" />
     <None Include="Fonts\Rex\Rex-Bold.woff2" />
     <None Include="Fonts\Rex\Rex-BoldInline.eot" />
     <Resource Include="Fonts\Rex\Rex-BoldInline.otf" />
-    <Resource Include="Fonts\Rex\Rex-BoldInline.ttf" />
+    <Content Include="Fonts\Rex\Rex-BoldInline.ttf" />
     <None Include="Fonts\Rex\Rex-BoldInline.woff" />
     <None Include="Fonts\Rex\Rex-BoldInline.woff2" />
     <None Include="Fonts\Rex\Rex-Light.eot" />
     <Resource Include="Fonts\Rex\Rex-Light.otf" />
-    <Resource Include="Fonts\Rex\Rex-Light.ttf" />
+    <Content Include="Fonts\Rex\Rex-Light.ttf" />
     <None Include="Fonts\Rex\Rex-Light.woff" />
     <None Include="Fonts\Rex\Rex-Light.woff2" />
     <None Include="Fonts\Rex\__MACOSX\._FFF EULA License ver2.1.pdf" />
