--- a/SimplyTotalCommander/SimplyTotalCommander.csproj
+++ b/SimplyTotalCommander/SimplyTotalCommander.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WindowControl.xaml.cs">
       <DependentUpon>WindowControl.xaml</DependentUpon>
     </Compile>
@@ -70,6 +73,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,7 +116,6 @@
     <Content Include="Fonts\Rex\Rex-Bold.ttf" />
     <Content Include="Fonts\Rex\Rex-BoldInline.ttf" />
     <Content Include="Fonts\Rex\Rex-Light.ttf" />
-    <None Include="background.png.webp" />
     <None Include="Fonts\Rex\Rex-Bold.eot" />
     <Resource Include="Fonts\Rex\Rex-Bold.otf" />
     <None Include="Fonts\Rex\Rex-Bold.woff" />
